<resources>
    <string name="app_name">NUMAD23Sp_Team27</string>
    <string name="team_27">Team 27</string>
    <string name="at_your_service">At Your Service</string>
    <string name="btnPingWebService">Ping Web Service</string>
    <string name="enter_a_food_or_dish">Enter a food or dish</string>
    <string name="search_for_recipes">Search for recipes</string>
    <string name="enter_a_food">Enter a food</string>
    <string name="search_recipes">Search recipes</string>
    <string name="sent_sticker">Stick It To \'Em</string>
    <string name="about_btn">ABOUT</string>
    <string name="zhengyuan_chen">Zhengyuan Chen</string>
    <string name="blake_koontz">Blake Koontz</string>
    <string name="alexander_thrush">Alexander Thrush</string>
    <string name="jeremiah_asala">Jeremiah Asala</string>
    <string name="btnLogin">Login</string>
    <string name="btnCreateUser">Create User</string>
    <string name="projtalk">ProjTalk</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="project">Project</string>
    <string name="profileSettingsBtn">Profile Settings</string>
    <string name="user_icon_desc">generic image of a user</string>
    <string name="btnUpdateNameEmail">Update Name/Email</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="updateDialog">Update</string>
    <string name="updateDiag">Update</string>
    <string name="cancel">Cancel</string>
    <string name="Forums">Go To Forums</string>
    <string name="pencil_icon">pencil icon</string>
    <string name="submit_post">Submit Post</string>
    <string name="add_diagram">Add Diagram</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="keep_tapping">Keep tapping.</string>
    <string name="done">Done!</string>
    <string name="drawing_canvas">Drawing Canvas</string>
    <string name="pick_shape">Pick Shape</string>
    <string name="select_color">Select Color</string>
    <string name="select_shape">Select Shape</string>
    <string name="BtnDeleteAccount">Delete Account</string>
    <string name="test">test</string>
</resources>