<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeActivity">

    <TextView
        android:id="@+id/teamNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_27"
        app:layout_constraintBottom_toTopOf="@+id/memberText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/memberText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blake_koontz"
        app:layout_constraintBottom_toTopOf="@+id/memberText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameText" />

    <TextView
        android:id="@+id/memberText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zhengyuan_chen"
        app:layout_constraintBottom_toTopOf="@+id/memberText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memberText1" />

    <TextView
        android:id="@+id/memberText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alexander_thrush"
        app:layout_constraintBottom_toTopOf="@+id/memberText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memberText2" />

    <TextView
        android:id="@+id/memberText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jeremiah_asala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memberText3" />
</androidx.constraintlayout.widget.ConstraintLayout>